--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
 datasets==2.14.4
-numpy==2.3.5
 peft==0.18.0
 Pillow==12.0.0
-PyYAML==6.0.2
-PyYAML==6.0.3
 qwen_vl_utils==0.0.14
 Requests==2.32.5
 sentence_transformers==5.1.2
 torch==2.5.1+cu124
 tqdm==4.67.1
 transformers==4.57.3
+torchvision
