--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Pillow==12.0.0
 qwen_vl_utils==0.0.14
 Requests==2.32.5
 sentence_transformers==5.1.2
-torch==2.5.1+cu124
 tqdm==4.67.1
 transformers==4.57.3
+torch
 torchvision
